Added compatibility back to 1703 (15063, Creators Update)

--- a/FluiFramework.UWP.Core/Styles/TextBox1809.xaml
+++ b/FluiFramework.UWP.Core/Styles/TextBox1809.xaml
@@ -7,8 +7,9 @@
 
     <!-- Fluent TextBox -->
     <Style x:Key="FluentTextBoxStyle" TargetType="TextBox">
+        <Setter Property="CornerRadius" Value="2" />
         <Setter Property="Padding" Value="12,6" />
         <Setter Property="BorderThickness" Value="1" />
     </Style>
-
+        
 </ResourceDictionary>
