--- a/FluiFramework.UWP.Core/Styles/ComboBox1809.xaml
+++ b/FluiFramework.UWP.Core/Styles/ComboBox1809.xaml
@@ -6,9 +6,10 @@
 
 
     <!-- Fluent TextBox -->
-    <Style x:Key="FluentTextBoxStyle" TargetType="TextBox">
+    <Style x:Key="FluentComboBoxStyle" TargetType="ComboBox">
+        <Setter Property="CornerRadius" Value="2" />
         <Setter Property="Padding" Value="12,8" />
         <Setter Property="BorderThickness" Value="1" />
     </Style>
-
+    
 </ResourceDictionary>
