--- a/FluiFramework.UWP.Core/Styles/TextBlock.xaml
+++ b/FluiFramework.UWP.Core/Styles/TextBlock.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FluiFramework.UWP.Core.Styles">
-    <!-- LAST UPDATED ON - 06 June 2019 -->
+    <!-- LAST UPDATED ON - 20 June 2019 -->
 
 
     <!-- Common text -->
@@ -67,7 +67,7 @@
     <!-- Subbody -->
     <!-- This will be the same as Body, but with the text in grey -->
     <Style x:Key="FluentSubbodyTextStyle" TargetType="TextBlock" BasedOn="{StaticResource FluentBodyTextStyle}">
-        <Setter Property="Foreground" Value="{StaticResource SystemControlForegroundBaseMediumBrush}" />
+        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
     </Style>
 
     <!-- Caption -->
