--- a/FluiFramework.UWP.Core/Styles/Button1809.xaml
+++ b/FluiFramework.UWP.Core/Styles/Button1809.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FluiFramework.UWP.Core.Styles">
-    <!-- LAST UPDATED ON - 17 July 2019 -->
+    <!-- LAST UPDATED ON - 22 July 2019 -->
 
 
     <!-- Fluent Standard Button -->
@@ -22,4 +22,27 @@
         <Setter Property="FontWeight" Value="SemiBold" />
         <Setter Property="Padding" Value="16,8" />
     </Style>
+
+
+    <!-- Dialog Buttons -->
+    <!-- Header buttons -->
+    <Style x:Key="FluentDialogButtonCloseStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Content" Value="&#xE106;" />
+        <Setter Property="CornerRadius" Value="2" />
+        <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="40" />
+    </Style>
+
+    <Style x:Key="FluentDialogButtonBackStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Content" Value="&#xE0C4;" />
+        <Setter Property="CornerRadius" Value="2" />
+        <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="40" />
+    </Style>
+
 </ResourceDictionary>
