--- a/FluiFramework.UWP.Core/Styles/Button.xaml
+++ b/FluiFramework.UWP.Core/Styles/Button.xaml
@@ -31,6 +31,15 @@
     
     
     <!-- Dialog Buttons -->
+    <!-- Fluent Dialog Button -->
+    <Style x:Key="FluentDialogButtonStandardStyle" TargetType="Button" BasedOn="{StaticResource FluentButtonStandardStyle}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="{ThemeResource SystemChromeGrayColor}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Padding" Value="16,8" />
+    </Style>
+    
     <!-- Header buttons -->
     <Style x:Key="FluentDialogButtonCloseStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
         <Setter Property="Background" Value="Transparent" />
