--- a/FluiFramework.UWP.Core/Styles/Button.xaml
+++ b/FluiFramework.UWP.Core/Styles/Button.xaml
@@ -37,7 +37,17 @@
         <Setter Property="BorderBrush" Value="{ThemeResource SystemChromeGrayColor}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="FontWeight" Value="SemiBold" />
-        <Setter Property="Padding" Value="16,8" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="Padding" Value="12,8" />
+    </Style>
+    <!-- Big Dialog Button -->
+    <Style x:Key="FluentDialogButtonBigStyle" TargetType="Button" BasedOn="{StaticResource FluentDialogButtonStandardStyle}">
+        <Setter Property="Padding" Value="12" />
+    </Style>
+    <!-- Small Dialog Button -->
+    <Style x:Key="FluentDialogButtonSmallStyle" TargetType="Button" BasedOn="{StaticResource FluentDialogButtonStandardStyle}">
+        <Setter Property="Padding" Value="12,4" />
     </Style>
     
     <!-- Header buttons -->
